Fixed a bug where the searchbar was lagging behind user input because of asynchronous state. Working on trying to not suggest inactive players in the input suggestions

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 */
 
 .App {
-  min-height: 400vh;
+  min-height: 190vh;
   background-color: #1f2833;
   overflow-x: hidden;
 }
@@ -206,7 +206,7 @@
   color: white;
   display: flex;
   justify-content: center;
-  font-size: 45px;
+  font-size: 35px;
 }
 
 .pFGM,
@@ -220,4 +220,5 @@
   color: white;
   display: flex;
   justify-content: center;
+  font-size: 30px;
 }
